<resources>
    <string name="app_name">LostPetz</string>
    <!-- Messaging Activity Resources -->

    <string name="no_messages_label">No Messages</string>
    <string name="image_upload_failed">Failed to upload image</string>
    <!-- Message console string values  -->
    <string name="send_message_hint">Type your message </string>
    <!-- PetQuery string resources-->
    <string name="searchview_hint"> Search for pets</string>

    <string name="cardview_filter_label">Filter Results</string>

    <string name="cardview_filter_name">Name</string>

    <string name="cardview_filter_zip">Zip</string>

    <string name="cardview_filter_breed">Breed</string>

    <string name="no_pets_found_textview">No pets found</string>

    <!-- Message inbox-->
    <string name="no_messages">No messages</string>

    <!-- PetSearchDetail-->
    <string name="name_label">Name:</string>
    <string name="description_label">User description:</string>
    <string name="lost_pet_button">Lost/Found</string>
    <string name="city_label">City:</string>
    <string name="breed_label">Breed:</string>
    <string name="date_lost_label">Date Lost:</string>

    <!-- AddPets Strings -->
    <string-array name="date_array">
        <item>Today</item>
        <item>Set Date</item>
    </string-array>
    <string name="pet_lost_status">Status:</string>
    <string name="add_pet_title_label">Add Pet to Database</string>
    <string name="submit_button_label">Submit</string>
    <string name="select_images_label">Select Images</string>
    <string name="date_lost_status_label">Date Lost:</string>
    <string name="date_found_status_label">Date Found:</string>
    <string name="date_picker_cancel">Cancel</string>
    <string name="date_picker_select_image_label">Select Images</string>
    <string name="date_picker_done">Done</string>
    <string name="pet_name_label">Name (Required)</string>
    <string name="pet_zip_label">Zip (Required)</string>
    <string name="pet_description_label">Description</string>
    <string name="pet_breed_label">Breed</string>
    <string name="pet_added_success">Pet added to the database</string>
    <string name="required_fields_fail">Please add a name and or a valid zip code</string>

    <!--SignIn -->
    <string name="name_hint">Full Name</string>
    <string name="email_hint_label">Email</string>
    <string name="password_hint_label">Password</string>
    <string name="forgot_passwrod_label">Forgot Password?</string>
    <string name="register_label">Register</string>
    <string name="login_fail"> Login failed, please check your credentials</string>
    <string name="reset_password_label">Reset Password</string>
    <string name="confirm_delete_pet">Delete</string>
    <string name="cancel_label">Cancel</string>
    <string name="reset_password_dialog_title">Reset Password</string>
    <string name="delete_pet_confirmation">Delete pet from Database?</string>
    <string name="reset_password_success">Password reset email sent</string>
    <string name="reset_password_fail"> Failed to send reset password email</string>
    <string name="non_null_email">Email cannot be empty</string>
    <string name="name_limit_fail">Please enter a valid name</string>
    <string name="google_signin_fail"> Failed to login with google</string>
    <string name="user_name_shared_pref"></string>
    <!-- Register-->
    <string name="confirm_password_hint">Confirm password</string>
    <string name="register_button_label">Register</string>
    <string name="register_success">Successfully registered your account</string>
    <string name="register_fail"> Unfortunately we could not register your account</string>
    <string name="password_match_fail">Your passwords did not match or did not meet the 7 minimum character count</string>

    <!-- PetSearchDetail-->
    <string name="poster_error">You are the poster of this pet</string>

    <!-- Message Inbox-->
    <string name="messages_title_label">Messages</string>
    <string name="no_inbox_messages_label">No active messages</string>

    <!-- Navigation Drawer -->
    <string name="sign_out_label"> Sign Out</string>
    <string name="profile_label">Profile</string>
    <string name="match_label">Match</string>

    <!-- PetProfileFragment-->
    <string name="user_pets_label">My Pets</string>
    <string name="profile_fragment_label">Profile</string>

    <!-- EditPetActivity -->
    <string name="edit_activity_name_label">Edit your pets</string>
    <string name="edit_pet_update_success">Pet Updated</string>
    <string name="edit_pet_update_failure">Pet Could not be updated</string>
    <string name="pet_deleted_success">Successfully Deleted Pet</string>
    <string name="pet_deleted_failure">Failed to Delete Pet</string>

</resources>
