<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:layout_margin="@dimen/horizontal_margin_large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_name"
            android:inputType="text"
            android:hint="@string/name_hint"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_margin="@dimen/horizontal_margin_large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_email"
            android:inputType="text"
            android:hint="@string/email_hint_label"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_margin="@dimen/horizontal_margin_large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_password"
            android:inputType="textPassword"
            android:hint="@string/password_hint_label"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_margin="@dimen/horizontal_margin_large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/register_confirm_password"
            android:inputType="textPassword"
            android:hint="@string/confirm_password_hint"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/register_cancel"
            android:text="@string/cancel_label"
            android:layout_margin="@dimen/horizontal_margin_large"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@color/colorPrime"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <Button
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@color/colorPrime"
            android:foreground="?android:attr/selectableItemBackground"
            android:id="@+id/register_submit"
            android:text="@string/submit_button_label"
            android:layout_margin="@dimen/vertical_margin_large"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>