<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".SignInActivty">


    <ImageView
        android:id="@+id/signin_logo"
        android:layout_margin="@dimen/vertical_margin_large"
        android:layout_width="match_parent"
        android:layout_height="100dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_margin="@dimen/horizontal_margin_large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/signin_email"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint_label"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_margin="@dimen/horizontal_margin_large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:id="@+id/signin_password"
            android:inputType="text"
            android:hint="@string/password_hint_label"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/signin_button"
        android:text="@string/common_signin_button_text"
        android:layout_margin="@dimen/vertical_margin_large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:id="@+id/signin_progressbar"
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/signin_forgot_password"
        android:text="@string/forgot_passwrod_label"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/signin_register"
        android:layout_margin="@dimen/vertical_margin_large"
        android:layout_gravity="center"
        android:text="@string/register_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/signin_google"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />


</LinearLayout>