<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <android.support.v7.widget.Toolbar
        app:contentInsetStart="0dp"
        android:id="@+id/toolbar"
        android:layout_alignParentTop="true"
        android:elevation="4dp"
        android:background="@color/colorPrime"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/horizontal_margin_large"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:text="@string/add_pet_title_label"
                android:textSize="@dimen/heading_text_size"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_marginBottom="@dimen/tab_bar_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:id="@+id/place_holder"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>


        <android.support.design.widget.TextInputLayout
            android:layout_margin="@dimen/horizontal_margin_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/add_pet_name"
                android:inputType="text"
                android:hint="@string/pet_name_label"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_margin="@dimen/horizontal_margin_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:hint="@string/pet_zip_label"
                android:inputType="number"
                android:id="@+id/add_pet_zip"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_margin="@dimen/horizontal_margin_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:inputType="textMultiLine"
                android:hint="@string/pet_description_label"
                android:id="@+id/add_pet_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_margin="@dimen/horizontal_margin_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:inputType="textMultiLine"
                android:hint="@string/pet_breed_label"
                android:id="@+id/add_pet_breed"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </android.support.design.widget.TextInputLayout>


        <RelativeLayout
            android:layout_marginTop="@dimen/vertical_margin_large"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:layout_marginLeft="@dimen/horizontal_margin_large"
            android:layout_marginRight="@dimen/horizontal_margin_large"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_centerInParent="true"
                android:background="@color/background_grey"
                android:layout_width="1dp"
                android:layout_height="50dp"/>

            <TextView
                android:id="@+id/lostStatus"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:textSize="@dimen/default_text_size"
                android:text="@string/pet_lost_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

                <RadioButton
                    android:checked="true"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:layout_below="@+id/lostStatus"
                    android:id="@+id/lost_radio_button"
                    android:layout_alignParentLeft="true"
                    android:text="Lost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/found_radio_button"
                    android:layout_marginTop="@dimen/vertical_margin"
                    android:layout_below="@+id/lostStatus"
                    android:layout_marginLeft="@dimen/horizontal_margin_large"
                    android:layout_toRightOf="@+id/lost_radio_button"
                    android:text="Found"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/lost_or_found_textview"
                android:textSize="@dimen/default_text_size"
                android:layout_toRightOf="@+id/filler_textview"
                android:layout_marginRight="@dimen/vertical_margin_extra_large"
                android:layout_alignParentTop="true"
                android:text="@string/date_lost_status_label"
                android:layout_marginLeft="@dimen/horizontal_margin_large"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <TextView
                android:layout_toLeftOf="@+id/add_pet_date_spinner"
                android:id="@+id/filler_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Spinner
                android:layout_marginTop="@dimen/vertical_margin"
                android:layout_below="@+id/lostStatus"
                android:layout_alignParentRight="true"
                style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                android:textAlignment="viewStart"
                android:id="@+id/add_pet_date_spinner"
                android:layout_marginBottom="@dimen/horizontal_margin_large"
                android:layout_marginLeft="@dimen/horizontal_margin_large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start" />

        </RelativeLayout>

        <!--

        <TextView
            android:layout_marginTop="@dimen/horizontal_margin_large"
            android:text="@string/date_label"
            android:layout_marginLeft="@dimen/horizontal_margin_large"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <Spinner
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:textAlignment="viewStart"
            android:id="@+id/add_pet_date_spinnerz"
            android:layout_marginBottom="@dimen/horizontal_margin_large"
            android:layout_marginRight="@dimen/horizontal_margin_large"
            android:layout_marginLeft="@dimen/horizontal_margin_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start" />

            -->

        <TextView
            android:layout_marginBottom="@dimen/horizontal_margin_large"
            android:text="@string/select_images_label"
            android:layout_marginLeft="@dimen/horizontal_margin_large"
            tools:text="Select Images"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_alignParentLeft="true"
                    android:id="@+id/add_pet_upload_one"
                    android:src="@drawable/ic_add_picture"
                    android:layout_width="64dp"
                    android:layout_height="64dp" />

                <ImageView
                    android:foreground="?android:attr/selectableItemBackground"
                    android:id="@+id/add_pet_cancel_image_one"
                    android:visibility="gone"
                    android:src="@drawable/ic_cancel"
                    android:layout_toRightOf="@+id/add_pet_upload_one"
                    android:layout_width="32dp"
                    android:layout_height="32dp" />

                <ImageView
                    android:foreground="?android:attr/selectableItemBackground"
                    android:visibility="visible"
                    android:id="@+id/add_pet_upload_two"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_add_picture"
                    android:layout_width="64dp"
                    android:layout_height="64dp" />

                <ImageView
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_alignParentTop="true"
                    android:id="@+id/add_pet_cancel_image_two"
                    android:visibility="gone"
                    android:src="@drawable/ic_cancel"
                    android:layout_toRightOf="@+id/add_pet_upload_two"
                    android:layout_width="32dp"
                    android:layout_height="32dp" />

                <ImageView
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="16dp"
                    android:id="@+id/add_pet_upload_three"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_add_picture"
                    android:layout_width="64dp"
                    android:layout_height="64dp" />

                <ImageView
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_toLeftOf="@+id/add_pet_upload_three"
                    android:layout_alignParentTop="true"
                    android:id="@+id/add_pet_cancel_image_three"
                    android:visibility="gone"
                    android:src="@drawable/ic_cancel"
                    android:layout_width="32dp"
                    android:layout_height="32dp" />

            </RelativeLayout>
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="90dp"/>

    </LinearLayout>

    </ScrollView>

    <Button
        android:padding="12dp"
        android:drawableRight="@drawable/ic_add_white"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/add_pet_tab_fab"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="@dimen/horizontal_margin_large"
        android:elevation="10dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:textColor="@color/white"
        android:background="@drawable/circle_button"
        android:id="@+id/add_pet_submit_button"
        android:layout_marginTop="26dp"
        android:layout_gravity="center"
        android:text="Add Pet "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
